# internal

./: .code-workspace  .envrc  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  Makefile  README.md  biome.json  codecov.yml  docker-compose.dev.yml  docker-compose.prod.yml  lefthook.yml  markdownlint-cli2.yaml  opencode.jsonc  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  skills-lock.json
crates/cron-routine/: Cargo.toml  Justfile  README.md  event.json
crates/cron-routine/scripts/: deploy.rs
crates/cron-routine/src/: main.rs
crates/feed/: Cargo.toml  README.md
crates/feed/src/: error.rs  lib.rs  main.rs  repository.rs  use_case.rs
crates/feed/tests/: fetch_aws.rs
crates/graphql/: Cargo.toml  Justfile  README.md
crates/graphql/scripts/: deploy.rs  deploy.sh
crates/graphql/src/: cache.rs  config.rs  error.rs  execute.rs  lib.rs  main.rs  mutation.rs  query.rs  resolver.rs  resolvers.rs  router.rs  schema.rs
crates/graphql/src/anki/: controller.rs  entity.rs  mod.rs  repository.rs  request.rs  response.rs  service.rs
crates/graphql/src/bookmark/: bookmark.json  controller.rs  entity.rs  mod.rs  repository.rs  response.rs  service.rs
crates/graphql/src/entity/: anki.rs  bookmark.rs  mod.rs  to_do.rs  typing.rs
crates/graphql/src/icon/: controller.rs  dto.rs  entity.rs  mod.rs  repository.rs  response.rs  service.rs
crates/graphql/src/image/: controller.rs  dto.rs  mod.rs  repository.rs  use_case.rs
crates/graphql/src/layer/: auth.rs
crates/graphql/src/middleware/: mod.rs
crates/graphql/src/model/: anki.rs  mod.rs  to_do.rs
crates/graphql/src/record/: typing.rs
crates/graphql/src/repository/: anki.rs  bookmark.json  bookmark.rs  bookmark_list.json  mod.rs  to_do.json  to_do.rs  todo_list.json  tts.rs  typing.rs
crates/graphql/src/resolver/: mod.rs
crates/graphql/src/resolvers/: anki.rs
crates/graphql/src/service/: anki.rs  bookmark.rs  mod.rs  to_do.rs  typing.rs
crates/graphql/src/to_do/: controller.rs  entity.rs  mod.rs  request.rs  response.rs  service.rs  to_do.json
crates/graphql/src/tts/: repository.rs
crates/graphql/src/typing/: dto.rs  mod.rs  repository.rs  service.rs
crates/graphql/src/util/: anki.rs  mod.rs
crates/graphql/tests/: get_parameter.rs  image_repository.rs
crates/http-api/: Cargo.toml  Justfile  README.md
crates/http-api-anki/: Cargo.toml
crates/http-api-anki/src/controller/: mod.rs  response.rs  router.rs
crates/http-api-anki/src/repository/: mod.rs
crates/http-api-anki/src/use_case/: mod.rs  output.rs
crates/http-api-bookmark/: Cargo.toml
crates/http-api-bookmark/src/controller/: mod.rs  response.rs  router.rs
crates/http-api-bookmark/src/repository/: mod.rs
crates/http-api-bookmark/src/use_case/: mod.rs  output.rs
crates/http-api-core/: Cargo.toml
crates/http-api-core/src/: cache.rs  error.rs  lib.rs
crates/http-api-core/src/layer/: auth.rs
crates/http-api-icon/: Cargo.toml
crates/http-api-icon/src/controller/: mod.rs  response.rs  router.rs
crates/http-api-icon/src/repository/: mod.rs
crates/http-api-icon/src/use_case/: mod.rs
crates/http-api-image/: Cargo.toml
crates/http-api-image/src/controller/: mod.rs  response.rs  router.rs
crates/http-api-image/src/repository/: mod.rs  output.rs
crates/http-api-image/src/use_case/: mod.rs  output.rs
crates/http-api-typing/: Cargo.toml
crates/http-api-typing/src/controller/: mod.rs  response.rs  router.rs
crates/http-api-typing/src/repository/: mod.rs  output.rs
crates/http-api-typing/src/use_case/: mod.rs
crates/http-api-writing-assessment/: Cargo.toml  prompt.md
crates/http-api-writing-assessment/src/: lib.rs
crates/http-api-writing-assessment/src/controller/: mod.rs  request.rs  router.rs
crates/http-api-writing-assessment/src/repository/: dynamodb.rs  mod.rs  openrouter.rs
crates/http-api-writing-assessment/src/use_case/: domain.rs  mod.rs
crates/http-api/src/: execute.rs  lib.rs  router.rs
crates/http-api/tests/: api_rest.rs
crates/jcode-cloudwatch/: Cargo.toml
crates/jcode-cloudwatch/src/: main.rs
crates/jcode-cloudwatch/tests/: live_cloudwatch.rs
crates/logs-reporter/: Cargo.toml  README.md
crates/logs-reporter/src/: event_handler.rs
crates/notion-notification/: Cargo.toml  Justfile  README.md
crates/notion-notification/scripts/: event.json  invoke.sh  raw.json
crates/notion-notification/src/: event.rs  generic_handler.rs  main.rs  notify.rs  object.rs
crates/notion-notification/src/event/: raw.rs
gateway/: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  setup-user.sh
gateway/src/: controllers.rs  error_handlers.rs  main.rs
gateway/src/controllers/: auth_controller.rs  langchain_controller.rs
gateway/src/models/: response_builder.rs
gateway/src/services/: auth_service.rs
graphql/: Cargo.toml  README.md
graphql/src/: context.rs  main.rs  mutation.rs  query.rs  resolvers.rs
graphql/src/models/: jwt.rs
graphql/src/mutation/: create_user.rs  login.rs  register.rs
graphql/src/query/: greet.rs
graphql/src/resolvers/: anki.rs  auth.rs  greet.rs  login.rs  logout.rs  refresh.rs  register.rs  signup.rs
graphql/src/resolvers/anki/: learn.rs
graphql/src/resolvers/auth/: login.rs  refresh.rs  session.rs
graphql/src/services/: jwt.rs
lambda/generate-jwt-secret/: Cargo.toml  event.json
lambda/generate-jwt-secret/src/: main.rs
langchain/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  bootstrap.py  bootstrap_prod.py  mypy.ini  pyproject.toml
langchain/src/: app.py
langchain/src/controllers/: git_controller.py
langchain/src/models/: response_builder.py
langchain/src/routers/: git_router.py  main_router.py
langchain/src/services/: git_service.py
python/ag-ui-server/: .dockerignore  .gitignore  Dockerfile  Justfile  README.md  build.sh  pyproject.toml
python/ag-ui-server/src/ag_ui_server/: __init__.py  agent.py  agui_bridge.py  config.py  (+4 more)
python/ag-ui-server/tests/: test_agui_bridge.py  test_prompt.py  test_server.py  test_session_store.py
(+308 files in other folders)
