[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0"
awc = "3"
actix-rt = "2"
hyper = "1"
futures = "0.3"
reqwest = "0"

jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"
chrono-tz = "0"

uuid = { version = "1", features = ["v4"] }

dotenv = "0.15.0"
