[package]
name = "lambda-rust-graphql"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
async-graphql = "7.0.7"
aws-config = "1.5.5"
aws-sdk-dynamodb = "1.40.0"
bcrypt = "0.15.1"
lambda_http = "0.13.0"
regex = "1.10.6"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"

tokio = { version = "1", features = ["macros"] }

