[project]
name = "langchain"
version = "0.1.0"
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT License" }
authors = [{ name = "Chomolungma Shirayuki", email = "shirayuki@46ki75.com" }]
dependencies = ["Flask", "mypy"]
