[tool.poetry]
name = "langchain"
version = "0.1.0"
description = ""
authors = ["shirayuki <shirayuki@46ki75.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
