[package]
name = "cron-routine"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.16.0", default-features = false, features = [
    "eventbridge",
] }
dotenvy = "0.15.7"

lambda_runtime = "0.13.0"
notionrs = "1.0.0-alpha.30"
tokio = { version = "1", features = ["macros"] }

tempfile = "3.16.0"
zip = "2.2.2"
aws-config = "1.5.11"
aws-sdk-lambda = "1.61.0"
uuid = { version = "1.12.1", features = ["v4"] }

[[bin]]
name = "deploy"
path = "./scripts/deploy.rs"
