[package]
name = "feed"
version = "0.1.0"
edition.workspace = true

[dependencies]
fast_html2md = "0.0.61"
feed-rs = "2.3.1"

lambda_runtime.workspace = true
reqwest = "0.13.3"
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
