[package]
name = "internal-graphql"
version = "0.1.0"
edition = "2024"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
reqwest = { version = "0.12.24", features = [
    "rustls-tls",
], default-features = false }
async-graphql = "7.0.17"
chrono = "0.4.42"
lambda_http = "0.17.0"
notionrs = { version = "0.4.2", features = ["rustls-tls"] }
notionrs_types = "0.3.0"
notion-to-jarkup = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros"] }
url = "2.5.7"

aws-config = "1.8.8"
aws-sdk-dynamodb = "1.96.0"
uuid = { version = "1.18.1", features = ["v4"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = { version = "0.11.8" }
aws-sdk-ssm = "1.97.0"
tracing-subscriber = { version = "0.3.20", features = ["ansi"] }
tracing = "0.1.41"
jarkup-rs = "0.5.1"
time = { version = "0.3.44", features = ["parsing"] }
bytes = "1.10.1"
html-meta-scraper = "0.2.0"
axum = "0.8.6"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = [
    "compression-gzip",
    "compression-br",
] }
http = "1.3.1"
aws-sdk-cognitoidentityprovider = "1.100.0"
futures = "0.3.31"
regex = "1.12.2"
