[package]
name = "internal-graphql"
version = "0.1.0"
edition = "2024"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
reqwest = { version = "0.13", features = [
    "rustls",
    "http2",
    "gzip",
    "brotli",
], default-features = false }
async-graphql = "7.2.1"
chrono = "0.4.43"
lambda_http = "1.0.2"
notionrs = { version = "0.9.0", features = ["rustls"] }
notionrs_types = "0.7.0"
notion-to-jarkup = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros"] }
url = "2.5.8"

aws-config = "1.8.13"
aws-sdk-dynamodb = "1.104.0"
uuid = { version = "1.20.0", features = ["v4"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
log = "0.4.29"
env_logger = { version = "0.11.8" }
aws-sdk-ssm = "1.103.0"
tracing-subscriber = { version = "0.3.22", features = ["ansi"] }
tracing = "0.1.44"
jarkup-rs = "0.6.0"
time = { version = "0.3.47", features = ["parsing"] }
bytes = "1.11.1"
html-meta-scraper = "0.2.0"
axum = "0.8.8"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = [
    "compression-gzip",
    "compression-br",
] }
http = "1.4.0"
aws-sdk-cognitoidentityprovider = "1.108.0"
futures = "0.3.31"
regex = "1.12.3"
infer = "0.19.0"
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
