[package]
name = "http-api-anki"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
http-api-core = { path = "../http-api-core" }

async-trait.workspace = true
axum.workspace = true
http.workspace = true
n2a2ui.workspace = true
notionrs.workspace = true
notionrs_types.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true

n2a2ui-a2ui = "0.2.0"
indexmap = { version = "2", features = ["serde"] }
time = { version = "0.3.47", features = ["parsing", "serde-human-readable"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
