[package]
name = "http-api-typing"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
http-api-core = { path = "../http-api-core" }

async-trait.workspace = true
aws-sdk-dynamodb.workspace = true
axum.workspace = true
http.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true

uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
