[package]
name = "http-api-writing-assessment"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
http-api-core = { path = "../http-api-core" }

async-trait.workspace = true
aws-sdk-dynamodb.workspace = true
axum.workspace = true
chrono.workspace = true
http.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true

uuid = { workspace = true, features = ["v4", "v7"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
