[package]
name = "jcode-cloudwatch"
version = "0.1.0"
edition.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-cloudwatch.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
