[package]
name = "logs-reporter"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.14"
aws-sdk-sns = "1.94.0"
aws_lambda_events = { version = "1.0.3", default-features = false, features = ["cloudwatch_logs"] }

lambda_runtime = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["macros"] }
