[package]
name = "logs-reporter"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config.workspace = true
aws-sdk-sns = "1.95.0"
aws_lambda_events = { version = "1.0.3", default-features = false, features = ["cloudwatch_logs"] }

lambda_runtime.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
