[package]
name = "notion-notification"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.6.1"
aws-sdk-ssm = "1.71.0"
aws_lambda_events = "0.16.0"

lambda_runtime = "0.13.0"
notionrs = "1.0.0-alpha.39"
serde = "1"
serde_plain = "1.0.2"
tokio = { version = "1", features = ["macros"] }
