[package]
name = "generate-jwt-secret"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.5.4"
aws-sdk-dynamodb = "1.39.1"
chrono = "0.4.38"
hex = "0.4.3"

lambda_runtime = "0.13.0"
rand = "0.8.5"
serde = "1"
serde_json = "1.0.122"
tokio = { version = "1", features = ["full", "macros"] }

