# A member of the repo-root uv workspace (members = ["python/*"]). The lockfile
# lives at the workspace root; this file declares only this package's runtime
# dependencies and how it is built.
[project]
name = "ag-ui-server"
version = "1.0.0"
description = "Claude Agent SDK agent exposed over the AG-UI protocol on Amazon Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.2.105",
    "ag-ui-protocol>=0.1.10",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "boto3>=1.35",
]

[build-system]
requires = ["uv_build>=0.7.0,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
